[package]
name = "geohack"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "*", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "*", features = [
	"http1",
	"http2",
	"tokio",
	"json",
	"macros",
] }
tracing = "*"
tracing-subscriber = "*"
tower-http = { version = "*", features = ["full"] }
anyhow = "*"
urlencoding = "*"
html-escape = "*"
regex = "*"
once_cell = "1"
aho-corasick = "1"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
